Move ParkingService to an interface